--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,4 @@ mongodb = "3.1.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 futures = "0.3"
-chrono = { version = "0.4.39", features = ["serde"] }
+dotenv = "0.15.0"
